fixing the alignment of the titles slide h1 h2 & h3Ã

--- a/inst/rmarkdown/templates/xaringan/resources/useR-fonts.css
+++ b/inst/rmarkdown/templates/xaringan/resources/useR-fonts.css
@@ -9,17 +9,14 @@ body { font-family: 'Droid Sans', 'Book Antiqua', Palatino, 'Microsoft YaHei', '
 
 h1 {
   font-family: 'Open Sans';
-  font-size: 36pt;
 }
 
 h2 {
   font-family: 'Open Sans';
-  font-size: 34pt;
 }
 
 h3 {
   font-family: 'Open Sans';
-  font-size: 32pt;
 }
 
 
