--- a/inst/rmarkdown/templates/xaringan/resources/useR.css
+++ b/inst/rmarkdown/templates/xaringan/resources/useR.css
@@ -9,29 +9,44 @@
   font-weight: bold;
 }
 
+
 .title-slide {
-  background-image: url("https://www.r-project.org/conferences/useR.png"), linear-gradient(to bottom, rgba(227, 227, 227) 100%, rgba(227, 227, 227) 100%), linear-gradient(to bottom, white 85%, rgba(227, 227, 227) 95%)  ;
-  background-position: 5% 15%, 0% 16%, center ;
-  background-size: 160px, 220px 140px , 100% 100%, cover ;
+  background-image: url("https://www.r-project.org/conferences/useR.png"), linear-gradient(to bottom, rgba(227, 227, 227) 100%, rgba(227, 227, 227) 100%), linear-gradient(to bottom, white 85%, rgba(227, 227, 227) 95%);
+  background-position: 5% 5%;
+  background-size: 250px;
 }
 
 .title-slide h1 {
-  position: absolute;
-  top: 60%;
-  left: 10%;
+  padding-top: 200px;
   text-align: left;
-  color: #454647;
+  padding-bottom: 2px;
+  margin-bottom: 2px;
   font-weight: bold;
+  color:#1B65B7;
+  font-size: 34pt;
+
+
+
+}
+
+.title-slide h2 {
+  text-align: left;
+  padding-top: 0px;
+  margin-top: 0px;
+  font-size: 24pt;
+
 }
 
 .title-slide h3 {
-  position: absolute;
-  top: 75%;
-  left: 10%;
   text-align: left;
-  color: #454647;
-  font-weight: normal;
+  text-shadow: none;
+  padding: 0px;
+  margin: 0px;
+  line-height: 1;
+  font-size: 20pt;
+
 }
+
 
 .chapter-slide {
   background-color: #1464b4;
